z-index fixes

--- a/assets/imagebox.css
+++ b/assets/imagebox.css
@@ -1,4 +1,5 @@
 .imagebox {
+    z-index: 3;
     border-radius: 1em;
     background: rgb(255, 249, 237);
     position: relative;
