--- a/assets/main.css
+++ b/assets/main.css
@@ -85,6 +85,7 @@ body {
 .follow-title-active {
     position: absolute;
     white-space: nowrap;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.197);
 }
 
 .hidden {
