--- a/assets/project-cards.css
+++ b/assets/project-cards.css
@@ -2,6 +2,7 @@ pcard {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    z-index: 3;
     margin-top: 1em;
     margin-bottom: 1em;
     border-radius: 2em;
